# Senior-Project

./: LICENSE
Archive/IRIS_BFV_MM_Square_Square/: CMakeLists.txt  bias_square_0.cpp  bias_square_2.cpp  bias_square_4.cpp  main.cpp  weight_square_0.cpp  weight_square_2.cpp  weight_square_4.cpp
Archive/Model_CKKS_Relu_Square/: CMakeLists.txt  bias_relu_0.cpp  bias_relu_2.cpp  bias_relu_6.cpp  main.cpp  weight_relu_0.cpp  weight_relu_2.cpp  weight_relu_6.cpp
Archive/Model_CKKS_Relu_Square/lib/: Util.cpp
IRIS_BFV_16384/: CMakeLists.txt  bias_square_0.cpp  bias_square_2.cpp  main.cpp  weight_square_4.cpp
IRIS_BFV_16384/lib/: Util.cpp  senior.pb.cc
IRIS_BFV_32768/: CMakeLists.txt  main.cpp
IRIS_CKKS_16384/: CMakeLists.txt  main.cpp  weight_square_0.cpp
IRIS_CKKS_32768/: CMakeLists.txt  main.cpp
IRIS_CKKS_Square_Square/: CMakeLists.txt  weight_square_2.cpp
IRIS_PLAIN/: CMakeLists.txt  bias_square_4.cpp  main.cpp
IRIS_PLAIN/lib/: Util.cpp
IRIS_PLAIN/lib/header/: Util.h
MNIST_CKKS_16384/: CMakeLists.txt  bias_square_0.cpp  main.cpp  weight_square_0.cpp  weight_square_6.cpp
MNIST_CKKS_16384/lib/: CMakeLists.txt
MNIST_CKKS_32768/: CMakeLists.txt  bias_square_4.cpp  main.cpp  weight_square_2.cpp
MNIST_PLAIN/: CMakeLists.txt  bias_square_2.cpp  bias_square_6.cpp  main.cpp  weight_square_4.cpp
MNIST_PLAIN/protobuf/: senior.proto
Model_CKKS_Relu_Square/: bias_relu_4.cpp  weight_relu_4.cpp
Model_CKKS_Square_Square/: CMakeLists.txt  bias_square_0.cpp  bias_square_2.cpp  bias_square_4.cpp  bias_square_6.cpp  main.cpp  weight_square_0.cpp  weight_square_2.cpp  weight_square_4.cpp  weight_square_6.cpp
Model_CKKS_Square_Square/lib/: senior.pb.cc
(+4 files in other folders)
